--- a/bForkNblog/pom.xml
+++ b/bForkNblog/pom.xml
@@ -3,16 +3,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.7</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <artifactId>Analysis</artifactId>
+        <groupId>top.byteinfo</groupId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
-    <groupId>top.byteinfo</groupId>
-    <artifactId>aForkNblog</artifactId>
+    <artifactId>bForkNblog</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>aForkNblog</name>
-    <description>aForkNblog</description>
+    <name>bForkNblog</name>
+    <description>bForkNblog</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
@@ -26,6 +24,17 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <!-- eureka-client -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
     </dependencies>
 
