--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,26 @@
-# Default ignored files
-./idea/
-./mvn/
-/shelf/
-/.idea/workspace.xml
-# Editor-based HTTP Client requests
-/httpRequests/
-# Datasource local storage ignored files
-/dataSources/
-/dataSources.local.xml
+## Default ignored files
+#./idea/
+#./mvn/
+#/shelf/
+#/.idea/workspace.xml
+## Editor-based HTTP Client requests
+#/httpRequests/
+## Datasource local storage ignored files
+#/dataSources/
+#/dataSources.local.xml
+
+!**/.md
+!**/pom.xml
+!**/src/main/**
+**/mvnw
+**/mvnw.cmd
+**/.mvn/**/**
+**/src/main/**/target/
+**/src/test/**/target/
+target/
+.idea
+.vscode
+*.iml
+*.suo
+*.ntvs*
+*.njsproj
